# Data-Science

./: .gitignore  README.md  lint.bash  pyproject.toml
.github/workflows/: data-science.yml
data/raw/: Concrete_Data.xlsx
post_processing/: 240430_EDA_housing.ipynb  240508_housing_analysis.ipynb  scratch_work.py  test.py
utilities/tests/: test_functions.py
utilities/utilities/: functions.py
